# as published by the Free Software Foundation; either version 3                                           #
# of the License, or (at your option) any later version.                                                   #
#                                                                                                          #
# This program is distributed in the hope that it will be useful,                                          #
# but WITHOUT ANY WARRANTY; without even the implied warranty of                                           #
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the                                             #
# GNU General Public License for more details.                                                             #
#                                                                                                          #
# You should have received a copy of the GNU General Public License                                        #
# along with this program; If not, see <http://www.gnu.org/licenses/>.                                     #
############################################################################################################


For more details, please see the README file.



July, 23, 2024, liftoverSV version 0.1.1_beta

	- Add the --PERCENT,P option


July, 12, 2024, liftoverSV version 0.1.0_beta

	liftoverSV: Lifts over a Structural Variation VCF file from one reference build to another.

	Purpose:
	- Lift over #CHROM and POS

	- Lift over INFO/END and INFO/SVEND
	=> drop the SV if:
	Case1: one position (start or end) is lifted while the other doesn't
	Case2: one position (start or end) goes to a different chrom from the other
	Case3: "lifted start" > "lifted end"
	Case4: the distance between the two lifted positions changes significantly (difference between both SVLENs > 5%)

	- Lift over INFO/SVLEN, INFO/SVSIZE


