@@ -21,9 +21,13 @@
 For more details, please see the README file.
 
 
+	- Update the contig field in the VCF header output:
+	  => The structured contig field includes all the ID attributes (do not include additional optional attributes)
+	     e.g. `##contig=<ID=chr22>`
+	- Add a DOI in README.md
+
 
 July, 23, 2024, liftoverSV version 0.1.1_beta
-
 	- Add the --PERCENT,P option
 
 
